<resources>
    <string name="app_name">Corretor de Gabarito</string>
    <string name="corrigir">CORRIGIR</string>
    <string name="branco">Branco</string>
    <string name="oficial">Oficial</string>
    <string name="aluno">Aluno</string>
    <string name="corretor">CORRETOR</string>
    <string name="de">DE</string>
    <string name="gabarito">GABARITO</string>
    <string name="mostrar">MOSTRAR ORIGINAL</string>
    <string name="cinza">CINZA</string>
    <string name="limiarizada">LIMIARIZADA</string>
</resources>
