<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.corretordegabarito.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/corretor"
        android:textSize="36sp"
        android:typeface="serif"
        android:layout_above="@id/textView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_marginStart="30pt"
        android:layout_marginLeft="30pt"
        android:layout_marginTop="20pt"
        android:background="@color/colorPrimary"
        android:onClick="MostrarFotos"
        android:text="@string/mostrar" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5pt"
        android:layout_marginLeft="5pt"
        android:layout_marginTop="5pt"
        android:layout_marginEnd="5pt"
        android:layout_marginRight="5pt"
        android:layout_marginBottom="5pt"
        android:background="@android:color/transparent"
        android:onClick="abrirCamera"
        app:srcCompat="@drawable/camera" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/de"
        android:textSize="36sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:text="@string/gabarito"
        android:textSize="36sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25pt"
        android:layout_marginLeft="25pt"
        android:layout_marginTop="20pt"
        android:layout_toEndOf="@id/button"
        android:layout_toRightOf="@id/button"
        android:background="@color/colorPrimary"
        android:onClick="IrTelaProvaCorrigida"
        android:text="@string/corrigir" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="107dp"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@android:color/transparent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>