<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.corretordegabarito.mostrarfotos"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200pt"
        android:layout_height="50pt"
        android:layout_below="@id/textView4"
        android:layout_centerHorizontal="true"
        app:srcCompat="@android:color/transparent"
        android:layout_marginTop="10pt"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200pt"
        android:layout_height="50pt"
        android:layout_centerHorizontal="true"
        app:srcCompat="@android:color/transparent"
        android:layout_below="@id/textView5"
        android:layout_marginTop="10pt"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200pt"
        android:layout_height="50pt"
        android:layout_below="@id/textView6"
        android:layout_centerHorizontal="true"
        app:srcCompat="@android:color/transparent"
        android:layout_marginTop="10pt"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/branco"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oficial"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageView"
        android:layout_marginTop="10pt"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aluno"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageView2"
        android:layout_marginTop="10pt"/>
</RelativeLayout>